feat: repeating timer for request telem over uart

--- a/.playground/telem.ipynb
+++ b/.playground/telem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -713,47 +713,47 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "UART: 1e\n",
-      "UART: 3\n",
-      "UART: 63\n",
+      "UART: 1c\n",
+      "UART: 4\n",
+      "UART: a8\n",
       "UART: 0\n",
       "UART: 0\n",
       "UART: 0\n",
-      "UART: 1\n",
-      "UART: 1\n",
-      "UART: 5\n",
-      "UART: 87\n",
+      "UART: 0\n",
+      "UART: 0\n",
+      "UART: 0\n",
+      "UART: 2a\n",
       "\n"
      ]
     }
    ],
    "source": [
     "telem = \"\"\"\n",
-    "UART: 1e\n",
-    "UART: 3\n",
-    "UART: 63\n",
+    "UART: 1c\n",
+    "UART: 4\n",
+    "UART: a8\n",
     "UART: 0\n",
     "UART: 0\n",
     "UART: 0\n",
-    "UART: 1\n",
-    "UART: 1\n",
-    "UART: 5\n",
-    "UART: 87\n",
+    "UART: 0\n",
+    "UART: 0\n",
+    "UART: 0\n",
+    "UART: 2a\n",
     "\"\"\"\n",
     "print(telem)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1e', '3', '63', '0', '0', '0', '1', '1', '5', '87']\n",
-      "0b11111100\n"
+      "['1c', '4', 'a8', '0', '0', '0', '0', '0', '0', '2a']\n",
+      "0b10011010\n"
      ]
     }
    ],
@@ -770,18 +770,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Temp C: 30\n",
-      "Volt V: 8.67\n",
+      "Temp C: 28\n",
+      "Volt V: 11.92\n",
       "Curr A: 0.0\n",
-      "Co mAh: 1\n",
-      "erpm  : 26100\n"
+      "Co mAh: 0\n",
+      "erpm  : 0\n"
      ]
     }
    ],
